- Added a new customdata entry for German Data Changes to add Machine Pistols and Submachine Guns to Standard and Heavy Weapon Mounts.
- Added missing side prompts to the synthetic modular full arm and leg.
- Fixed a typo in the Cavalier Arms Adder Slivergun's name.
- Added a new customdata entry for the Ram Plate Vehicle Modification that sets it to use the stats as provided in Hero Lab. 

String Changes:

- Added a string tag for the Enable Plugins menu option. Closes #3486

Build 205

Application Changes:
- Added a new improvement type - actiondicepool - to support specific Actions receiving dicepool bonuses. Currently only Threading is supported by this.
- Fixed behaviour of Exotic weapons to prevent them from from using the first exotic skill found.
- Exposed the selection of AI programs to the main RequirementsMet method. Prevents issues with programs not being translated, offends me slightly less. Fixes #3350
- Fixed processing of FixedValues on the Select Gear window.
- Refactored string processing method for Gear Ratings into a single method. Allows MinRating, MaxRating, MatrixAttributes and TotalBonusMatrixBoxes (for LivingPersona only) to use complex strings such as {Parent DeviceRating}. Fixes #3360
- Foxed some behaviour in creation of packs to properly allow creatio nof lifestyles.
- Fixed behaviour of child Cyberware with the AddToParentESS flag not properly adding their essence cost to the parent.
- Fixed issues with the subsystem and gear limitations for Cyberware and Gear that prevented categories from loading properly.
- Capped cost multipliers for lifestyles to -0%. 
- Added the 'lifestyle' attribute to the lifestylecost and basiclifestylecost improvement types. This supports limiting the bonus to a specific Lifestyle type, such as Low or Squatter. 
- ValueOf has been altered slightly to allow for selecting objects that are either of a given ImprovedName, or don't have one, in support of the above changes. Defaults to existing behaviour.